# REST-IA

./: .env  .env.example  .env.local  .env.production  .env.staging.example  .gitattributes  .gitignore  .vercelignore  APP_REALTIME_FIXED.md  APP_VIRGIN_BLINDADA.md  App.tsx  BUILD-PRODUCTION-RESUMO.md  BUILD_ENV_CHECK.md  BUILD_TAURI_INSTRUCTIONS.md  CACHE_CLEAN_BUTTON.md  CACHE_SYNC_CORRECAO.md  CORRECOES_FINALAIS.md  CORRECOES_FINAL_OWNER.md  CORRECOES_OWNER_HUB.md  DATABASE_CENTER_FIX.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_IMEDIATO.md  EXPENSE_DELETE_FIX.md  FILTRO_DATA_CORRECAO_FINAL.md  FILTRO_DATA_LUANDA.md  FORCE_CLEAN_SCRIPT.js  FORCE_SUPABASE_TEST.md  FORMULAS_CORRIGIDAS.md  FUSO_HORARIO_CORRECAO.md  INSTALL.md  LICENSE.txt  MSI_BUILD_SUCESSO.md  PERSISTENCE_CRASH_FIX.md  README.md  README_EMERGENCY_CLEANUP.md  RECUPERACAO_PRODUTOS.md  SINCRONIZACAO_REVIVIDA.md  SOMA_FINAL_CORRIGIDA.md  SUPABASE_CLI_SETUP.md  (+76 more)
.vercel/: project.json
components/: Sidebar.tsx
docs/: TEST_STRATEGY_AND_PROCESS.md
electron/: main.js
pages/: CustomerDisplay.tsx  Dashboard.tsx  DigitalMenuManager.tsx  Employees.tsx  Finance.tsx  Inventory.tsx  Kitchen.tsx  Login.tsx  POS.tsx  ProfitCenter.tsx  PublicMenu.tsx  Settings.tsx  TableLayout.tsx
prisma/: schema.prisma
public/: approve-purchase.html  manifest-owner.json  owner.html  sw-owner.js
scripts/: autofix.js  check-all-orders.sql  (+47 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_schema.sql  lib.rs  main.rs  supabase_config.rs
(+210 files in other folders)
